--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   
-<div class="container1">
-</div>
+<div class="container"></div>
+
+<div class="palette"></div>
+
 </body>
 </html>
