Create generate grid possibility

--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-  
-<div class="container"></div>
 
-<div class="palette"></div>
+<div id="mainContainer"></div>
+    <p>Give number of squares per side of the grid (max: 100):</p>
+
+    <div class="form">
+        <input id="input" type="number">
+        <button id="generate"> GENERATE </button>
+    </div>
+
+    <div id="gridPlusPalette">
+        <div class="container"></div>
+        <div class="palette"></div>
+    </div>
+</div>
 
 </body>
 </html>
