--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div id="mainContainer"></div>
-    <p>Give number of squares per side of the grid (max: 100):</p>
+    <p>Number of squares per side (max: 100):</p>
 
     <div class="form">
         <input id="input" type="number">
